dovecot/dovecot-pigeonhole/tests/extensions/include/errors/circular-2.sieve
require "include";

discard;

include "circular-two.sieve";
